crates/rattler_conda_types/src/package/snapshots/rattler_conda_types__package__link__test__link-json__setuptools-link.json.snap
---
source: crates/rattler_conda_types/src/package/link.rs
expression: link_json
---
noarch:
  type: python
package_metadata_version: 1
