crates/rattler_conda_types/src/package/snapshots/rattler_conda_types__package__link__test__link-json__tzdata-link.json.snap
---
source: crates/rattler_conda_types/src/package/link.rs
expression: link_json
---
noarch:
  type: generic
package_metadata_version: 1
